# sqle/docs/swagger.json
@@ -118,7 +118,7 @@
                 }
             }
         },
-        "/v1/audit_plans/analysis/reports/{audit_plan_report_id}/sqls/{number}/": {
+        "/v1/audit_plans/reports/{audit_plan_report_id}/sqls/{number}/analysis": {
             "get": {
                 "security": [
                     {
@@ -2655,45 +2655,6 @@
                 }
             }
         },
-        "/v1/tasks/analysis/{task_id}/sqls/{number}/": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "get SQL explain and related table metadata for analysis",
-                "tags": [
-                    "task"
-                ],
-                "summary": "获取task相关的SQL执行计划和表元数据",
-                "operationId": "getTaskAnalysisData",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "task id",
-                        "name": "task_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "sql number",
-                        "name": "number",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/v1.GetTaskAnalysisDataResV1"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/tasks/audits": {
             "post": {
                 "security": [
@@ -3021,6 +2982,45 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/controller.BaseRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/tasks/audits/{task_id}/sqls/{number}/analysis": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get SQL explain and related table metadata for analysis",
+                "tags": [
+                    "task"
+                ],
+                "summary": "获取task相关的SQL执行计划和表元数据",
+                "operationId": "getTaskAnalysisData",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "task id",
+                        "name": "task_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "sql number",
+                        "name": "number",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.GetTaskAnalysisDataResV1"
                         }
                     }
                 }
@@ -5207,6 +5207,26 @@
                 }
             }
         },
+        "v1.ExplainTable": {
+            "type": "object",
+            "properties": {
+                "head": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1.SQLResultItemHeadResV1"
+                    }
+                },
+                "rows": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "v1.FullSyncAuditPlanSQLsReqV1": {
             "type": "object",
             "properties": {
@@ -5967,16 +5987,12 @@
             "type": "object",
             "properties": {
                 "sql_explains": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/v1.SQLExplain"
-                    }
+                    "type": "object",
+                    "$ref": "#/definitions/v1.SQLExplain"
                 },
                 "table_metas": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/v1.TableMeta"
-                    }
+                    "type": "object",
+                    "$ref": "#/definitions/v1.TableMeta"
                 }
             }
         },
@@ -6131,16 +6147,12 @@
             "type": "object",
             "properties": {
                 "sql_explains": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/v1.SQLExplain"
-                    }
+                    "type": "object",
+                    "$ref": "#/definitions/v1.SQLExplain"
                 },
                 "table_metas": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/v1.TableMeta"
-                    }
+                    "type": "object",
+                    "$ref": "#/definitions/v1.TableMeta"
                 }
             }
         },
@@ -6989,23 +7001,13 @@
         "v1.SQLExplain": {
             "type": "object",
             "properties": {
-                "head": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/v1.SQLResultItemHeadResV1"
-                    }
-                },
-                "rows": {
-                    "type": "array",
-                    "items": {
-                        "type": "object",
-                        "additionalProperties": {
-                            "type": "string"
-                        }
-                    }
-                },
                 "sql": {
                     "type": "string"
+                },
+                "table": {
+                    "description": "explain result in table format",
+                    "type": "object",
+                    "$ref": "#/definitions/v1.ExplainTable"
                 }
             }
         },
